<resources >
    <string name="app_name">CryptoMoon</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">riCBLpP9iH2s7MFnpGl1e4WTE</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">81jDscHIH4cZ6EBGvkyPyleX2IldRLCPheOTscEactc2knw6dd</string>

    <string name="market">Market</string>
    <string name="last_price">Last price</string>
    <string name="change_24h">Change 24h</string>
    <string name="coins">Coins</string>
    <string name="ico">ICO</string>
    <string name="top100">Top 100</string>
    <string name="news">News</string>
    <string name="add_coin">Add coin</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="price_increase">Price increase</string>
    <string name="price_decrease">Price decrease</string>
    <string name="price_changed_24h">24h price</string>
    <string name="price_changed_24h_increase">24h price increase</string>
    <string name="price_changed_24h_decrease">24h price decrease</string>
    <string name="enter_coin_name">Enter coin name</string>
    <string name="add_coin_from_hint">Enter coin name</string>
    <string name="add_coin_to_hint">To here</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="matches_found">matches found</string>
    <string name="searching_info">Searching for coin info, please wait</string>
    <string name="coin_not_found">Coin not found</string>
    <string name="coin_added">Coin added</string>
    <string name="coin_already_added">Coin already added</string>
    <string name="settings">Settings</string>
    <string name="remove_coin">Remove coin</string>
    <string name="coins_deleted">Coins deleted</string>
    <string name="coin_deleted">Coin deleted</string>
    <string name="coin_logo_transition_name">coinLogo</string>
    <string name="twenty_four_hours">24H DATA</string>
    <string name="open">OPEN</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="change">CHANGE</string>
    <string name="change_pct">CHANGE %</string>
    <string name="supply">Circulating supply</string>
    <string name="cap">Market cap</string>
    <string name="choose_currency">Choose currency</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="dollar_sign">$</string>
    <string name="pct_sign">%</string>
    <string name="error">Error</string>
    <string name="current_price">Current price</string>
    <string name="trading_price">Trade price</string>
    <string name="quantity">Quantity</string>
    <string name="trade_date">Trade date</string>
    <string name="total_value">Total value</string>
    <string name="confirm_transaction">Confirm transaction</string>
    <string name="add_transaction">Add transaction</string>
    <string name="add_trans_fill_all_fields">Fill in all fields</string>
    <string name="add_trans_fill_date">Choose transaction date</string>
    <string name="add_trans_fill_price">Fill in price field</string>
    <string name="add_trans_fill_quantity">Fill in quantity field</string>
    <string name="total_holdings">Total holdings</string>
    <string name="total_holdings_change">All time change</string>
    <string name="all_time">All time</string>
    <string name="profit">profit</string>
    <string name="loss">loss</string>
    <string name="holdings_24h">24H</string>
    <string name="holdings">Holdings</string>
    <string name="transaction_added">Transaction added</string>
    <string name="current_total">Current total</string>
    <string name="current">Current</string>
    <string name="qty">QTY</string>
    <string name="val">VAL</string>
    <string name="ch_pct">CH PCT</string>
    <string name="prf">PRF</string>
    <string name="ls">LS</string>
    <string name="profit_b">Profit</string>
    <string name="loss_b">Loss</string>
    <string name="holdings_deleted">Holdings deleted</string>
    <string name="holdngs_data">HOLDINGS DATA</string>
    <string name="change_percent">Change percent</string>
    <string name="allocations">Allocations</string>
    <string name="string_coins">Coins</string>
    <string name="enter_hashtag">Enter hashtag</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="empty_text">No news found</string>
    <string name="empty_coins">Oops, it seems you do not have any coins. You can add them through a plus sign or in the top coins</string>


    <string-array name="histo_periods">
        <item>1 hour</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
    </string-array>
</resources>
