<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove_coin"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_add_coin"
        android:icon="@drawable/ic_add"
        android:title="@string/add_coin"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_menu_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>