<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="8dp">

    <TextView
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@color/grey_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by">

        <RadioButton
            android:id="@+id/sort_dialog_by_name"
            style="@style/MyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coin_name" />

        <RadioButton
            android:id="@+id/sort_dialog_by_price_increase"
            style="@style/MyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_drop_up_green"
            android:text="@string/price" />

        <RadioButton
            android:id="@+id/sort_dialog_by_price_decrease"
            style="@style/MyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_drop_down_red"
            android:text="@string/price" />

        <RadioButton
            android:id="@+id/sort_dialog_by_24h_price_increase"
            style="@style/MyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_drop_up_green"
            android:text="@string/price_changed_24h" />

        <RadioButton
            android:id="@+id/sort_dialog_by_24h_price_decrease"
            style="@style/MyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_drop_down_red"
            android:text="@string/price_changed_24h" />

    </RadioGroup>

    <Button
        android:id="@+id/sort_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:minWidth="130dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sort_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <Button
        android:id="@+id/sort_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:minWidth="130dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sort_cancel"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

</android.support.constraint.ConstraintLayout>