<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.rmnivnv.cryptomoon.ui.addTransaction.AddTransactionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@color/grey_light"
            android:background="@color/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/add_trans_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/grey_light"
            tools:text="BTC / USD"/>

        <TextView
            android:id="@+id/add_trans_current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:textColor="@color/grey_light"
            tools:text="$4504"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey_light"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_trans_trading_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trading_price"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:textColor="@color/grey_light"
            android:textColorHint="@color/grey_light"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey_light"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_trans_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/grey_light"
            android:textColorHint="@color/grey_light"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey_light"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_trans_trade_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trade_date"
            android:focusable="false"
            android:maxLines="1"
            android:textColor="@color/grey_light"
            android:textColorHint="@color/grey_light"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_value"
            android:textColor="@color/grey_light"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/add_trans_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/grey_light"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_trans_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm_transaction"/>

</LinearLayout>
