<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginBottom="1dp"
    android:background="@color/darker_gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/holdings_item_from_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:textStyle="bold"
                tools:text="BTC / USD"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/trading_price"/>

            <TextView
                android:id="@+id/holdings_item_trade_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                tools:text="$2500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/trade_date"/>

            <TextView
                android:id="@+id/holdings_item_trade_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                tools:text="01/09/2017"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/current"/>

            <TextView
                android:id="@+id/holdings_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/grey_light"
                tools:text="25"/>

            <TextView
                android:id="@+id/holdings_item_current_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                tools:text="$100000"/>

            <TextView
                android:id="@+id/holdings_item_change_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                tools:text="+25%"/>

            <TextView
                android:id="@+id/holdings_item_change_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                tools:text="+$25000"/>

        </LinearLayout>

</RelativeLayout>